Localization cleanup - fixed errors on Profile and Name Generator pages.

--- a/charsheet.html
+++ b/charsheet.html
@@ -13,7 +13,7 @@
 <body>
 	<nav>
 		<div id="helpPanel">
-			<button type="button" id="buttonHelp">Help</button>
+			<button type="button" id="buttonHelp" data-localization-key="HELP">Help</button>
 		</div>
 		<h1 title="RETURN_TO_DASHBOARD" data-localization-key="ROLLPLAY_TITLE">ESO Rollplay</h1>
 		<div class="toolbar">
