Added language selection to Dashboard options, corrected formatting for localized content.

--- a/charsheet.html
+++ b/charsheet.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/charsheet.css" />
 </head>
-<body>
+<body id="charSheet">
 	<nav>
 		<div id="helpPanel">
 			<button type="button" id="buttonHelp" data-localization-key="HELP">Help</button>
