--- a/dashboard.html
+++ b/dashboard.html
@@ -86,6 +86,15 @@
 			<h3 data-localization-key="ACCOUNT_SETTINGS">Account Settings</h3>
 			<div class="settingGroup">
 				<div>
+					<label for="optLanguage" data-localization-key="LANGUAGE">Language</label>
+					<select id="optLanguage">
+						<option value="EN-US" data-localization-key="EN-US">English</option>
+						<option value="PT-BR" data-localization-key="PT-BR">Português do Brasil</option>
+					</select>
+				</div>
+			</div>
+			<div class="settingGroup">
+				<div>
 					<label for="optVolume" data-localization-key="ALERT_VOLUME">Alert Volume</label>
 					<input type="range" id="optVolume" min="0" max="1" step="0.1"></input>
 				</div>
