Further corrections for templates with '('.

--- a/charsheet.html
+++ b/charsheet.html
@@ -123,19 +123,19 @@
 							<label for="birthsign" data-localization-key="LABEL_BIRTHSIGN">Birthsign</label>
 							<select name="birthsign">
 								<option value="" data-localization-key="NOT_SET">-- Not Set --</option>
-								<option data-localization-key="BIRTHSIGN_APPRENTICE">The Apprentice</option>
-								<option data-localization-key="BIRTHSIGN_ATRONACH">The Atronach</option>
-								<option data-localization-key="BIRTHSIGN_LADY">The Lady</option>
-								<option data-localization-key="BIRTHSIGN_LORD">The Lord</option>
-								<option data-localization-key="BIRTHSIGN_LOVER">The Lover</option>
-								<option data-localization-key="BIRTHSIGN_MAGE">The Mage</option>
-								<option data-localization-key="BIRTHSIGN_RITUAL">The Ritual</option>
-								<option data-localization-key="BIRTHSIGN_SERPENT">The Serpent</option>
-								<option data-localization-key="BIRTHSIGN_SHADOW">The Shadow</option>
-								<option data-localization-key="BIRTHSIGN_STEED">The Steed</option>
-								<option data-localization-key="BIRTHSIGN_THIEF">The Thief</option>
-								<option data-localization-key="BIRTHSIGN_TOWER">The Tower</option>
-								<option data-localization-key="BIRTHSIGN_WARRIOR">The Warrior</option>
+								<option value="BIRTHSIGN_APPRENTICE" data-localization-key="BIRTHSIGN_APPRENTICE">The Apprentice</option>
+								<option value="BIRTHSIGN_ATRONACH" data-localization-key="BIRTHSIGN_ATRONACH">The Atronach</option>
+								<option value="BIRTHSIGN_LADY" data-localization-key="BIRTHSIGN_LADY">The Lady</option>
+								<option value="BIRTHSIGN_LORD" data-localization-key="BIRTHSIGN_LORD">The Lord</option>
+								<option value="BIRTHSIGN_LOVER" data-localization-key="BIRTHSIGN_LOVER">The Lover</option>
+								<option value="BIRTHSIGN_MAGE" data-localization-key="BIRTHSIGN_MAGE">The Mage</option>
+								<option value="BIRTHSIGN_RITUAL" data-localization-key="BIRTHSIGN_RITUAL">The Ritual</option>
+								<option value="BIRTHSIGN_SERPENT" data-localization-key="BIRTHSIGN_SERPENT">The Serpent</option>
+								<option value="BIRTHSIGN_SHADOW" data-localization-key="BIRTHSIGN_SHADOW">The Shadow</option>
+								<option value="BIRTHSIGN_STEED" data-localization-key="BIRTHSIGN_STEED">The Steed</option>
+								<option value="BIRTHSIGN_THIEF" data-localization-key="BIRTHSIGN_THIEF">The Thief</option>
+								<option value="BIRTHSIGN_TOWER" data-localization-key="BIRTHSIGN_TOWER">The Tower</option>
+								<option value="BIRTHSIGN_WARRIOR" data-localization-key="BIRTHSIGN_WARRIOR">The Warrior</option>
 							</select>
 						</div>
 						<div class="flexMe">
