Added support for NPC characters.  GM Screen now autolaunches session tabs for characters the GM will be playing.

--- a/charsheet.html
+++ b/charsheet.html
@@ -163,6 +163,15 @@
 							<input type="text" name="relationships" maxlength="1000" placeholder="RELATIONSHIPS_DESCRIPTION" data-localization-key></input>
 						</div>
 					</div>
+					<div id="npcPanel" class="hideMe">
+						<div>
+							<input type="checkbox" id="isNPC" name="isNPC" />
+							<label for="isNPC" data-localization-key="LABEL_CHARACTER_IS_NPC">This character is an NPC.</label>
+						</div>
+						<div data-localization-key="CHARACTER_NPC_DESCRIPTION">
+							This setting is only available for Gamemasters.  A character that is marked as an NPC can be played by any GM that add that character to their session.
+						</div>
+					</div>
 					<div>
 						<button type="button" id="saveProfile" data-localization-key="SAVE">Save</button>
 					</div>
