Many minor fixes.

--- a/charsheet.html
+++ b/charsheet.html
@@ -169,7 +169,7 @@
 							<label for="isNPC" data-localization-key="LABEL_CHARACTER_IS_NPC">This character is an NPC.</label>
 						</div>
 						<div data-localization-key="CHARACTER_NPC_DESCRIPTION">
-							This setting is only available for Gamemasters.  A character that is marked as an NPC can be played by any GM that add that character to their session.
+							This setting is only available for Gamemasters.  A character that is marked as an NPC can be played by any GM that adds that character to their session.
 						</div>
 					</div>
 					<div>
