Added PvP support.  Players/pets can now attack other players/pets.

--- a/rollplay.html
+++ b/rollplay.html
@@ -74,6 +74,24 @@
 						<div id="summonControls">
 						</div>
 					</span>
+					<span>
+						<h3 data-localization-key="SECTION_PVP">Player vs. Player</h3>
+						<div id="pvpControls">
+							<div>
+								<p>
+									<label for="pvpRollSelect" data-localization-key="ROLL_USING">Roll using</label>
+									<select id="pvpRollSelect" name="pvpRollSelect"></select>
+									<button id="pvpAttackExecute" type="button" data-localization-key="ACTION_ATTACK!">Attack!</button>
+								</p>
+								<p id="pvpPetControls" class="hideMe">
+									<button id="pvpAttackPet" type="button" data-localization-key="ACTION_ATTACK_WITH_PET!">Attack with Pet!</button>
+								</p>
+							</div>
+							<div>
+								<select id="pvpTarget"></select>
+							</div>
+						</div>
+					</span>
 					<div>
 						<h3 data-localization-key="ENEMIES">Enemies</h3>
 						<ol id="npcList"></ol>
