--- a/dashboard.html
+++ b/dashboard.html
@@ -57,6 +57,9 @@
 						<button type="button" id="playCharacter" disabled="true" data-localization-key="BUTTON_PLAY">Play!</button>
 						<button type="button" id="editCharacter" disabled="true" data-localization-key="BUTTON_EDIT">Edit</button>
 						<button type="button" id="deleteCharacter" disabled="true" data-localization-key="BUTTON_DELETE">Delete</button>
+						<div id="storyContainer">
+							<button type="button" id="manageStories" data-localization-key="STORIES">Stories</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -81,6 +84,14 @@
 			<p id="confirmText"></p>
 			<button id="confirmOk" type="button" data-localization-key="OK">Ok</button>
 			<button id="confirmCancel" type="button" data-localization-key="CANCEL">Cancel</button>
+		</div>
+		<div id="storyModal">
+			<h3 data-localization-key="STORIES">Stories</h3>
+			<div>
+				<ul></ul>
+			</div>
+			<button id="createStory" type="button" data-localization-key="CREATE_STORY">Create Story</button>
+			<button id="storyCancel" type="button" data-localization-key="CANCEL">Cancel</button>
 		</div>
 		<div id="settingsModal">
 			<h3 data-localization-key="ACCOUNT_SETTINGS">Account Settings</h3>
