Curly braces can now be used to link character profiles - e.g. {Viera Curio}

--- a/profile.html
+++ b/profile.html
@@ -50,6 +50,7 @@
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/localization.js"></script>
 	<script src="./assets/js/esorplib.js"></script>
+	<script src="./assets/js/showdown-rollplay.js"></script>
 	<script src="./assets/js/profile.js"></script>
 </body>
 </html>
