--- a/story.html
+++ b/story.html
@@ -29,6 +29,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/esorplib.js"></script>
+	<script src="./assets/js/showdown-rollplay.js"></script>
 	<script src="./assets/js/story.js"></script>
 </body>
 </html>
