--- a/charsheet.html
+++ b/charsheet.html
@@ -199,6 +199,7 @@
 				<p data-localization-key="CHARACTER_HELP_KNOWLEDGE_SKILLS_TEXT">Knowledge skills are a special class of skill that always have Intelligence as their governing attribute.  Some are more difficult to learn and increase in difficulty more quickly.</p>
 				<h3 data-localization-key="PROFILE_INFO">Profile Info</h3>
 				<p><span data-localization-key="CHARACTER_HELP_PROFILE_INFO_BEFORE_LINK">Below your skill selections, you can enter more information for your character.  All fields support</span> <a href="https://www.markdownguide.org/basic-syntax/" target="_blank" data-localization-key="MARKDOWN">Markdown</a> <span data-localization-key="CHARACTER_HELP_PROFILE_INFO_AFTER_LINK">formatting!</span></p>
+				<p data-localization-key="CHARACTER_HELP_MARKDOWN_EXTENSIONS">Use curly braces to link to a character's profile - {Example}</p>
 			</div>
 			<button id="helpDone" type="button" data-localization-key="OK">Ok</button>
 		</div>
@@ -232,6 +233,7 @@
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/localization.js"></script>
 	<script src="./assets/js/esorplib.js"></script>
+	<script src="./assets/js/showdown-rollplay.js"></script>
 	<script src="./assets/js/charsheet.js"></script>
 </body>
 </html>
