--- a/write.html
+++ b/write.html
@@ -61,6 +61,9 @@
             <p>
                 <b><i>***Bold Italic***</i></b>
             </p>
+			<p>
+				{<u>Character Profile Link</u>}
+			</p>
             <button type="button" data-localization-key="OK" closeModal>Ok</button>
         </div>
 		<div id="errorModal">
@@ -82,6 +85,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-auth.js"></script>
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/localization.js"></script>
+	<script src="./assets/js/showdown-rollplay.js"></script>
 	<script src="./assets/js/write.js"></script>
 </body>
 </html>
