Standardized Markdown formatting on all pages.

--- a/charsheet.html
+++ b/charsheet.html
@@ -210,7 +210,7 @@
 		</div>
 		<div id="previewModal">
 			<h3>Preview</h3>
-			<div></div>
+			<div class="markdownFormatted"></div>
 			<button id="previewOk" type="button" data-localization-key="OK">Ok</button>
 		</div>
 		<div id="errorModal">
