--- a/write.html
+++ b/write.html
@@ -39,7 +39,7 @@
     <footer>Saved successfully!</footer>
     <div id="modalBG">
 		<div id="previewModal">
-			<div></div>
+			<div class="markdownFormatted"></div>
 			<button type="button" data-localization-key="OK" closeModal>Ok</button>
 		</div>
         <div id="helpModal">
