--- a/story.html
+++ b/story.html
@@ -14,7 +14,7 @@
 		<h1><a href="/" data-localization-key="ROLLPLAY_TITLE">ESO Rollplay</a></h1>
 	</nav>
     <div id="loading"></div>
-	<section id="main" class="hideMe">
+	<section id="main" class="hideMe markdownFormatted">
     </section>
 	<div id="modalBG">
 		<div id="errorModal">
