Changed site to reference RP Profile Viewer addon rather than Rollplay Integration.

--- a/dashboard.html
+++ b/dashboard.html
@@ -70,8 +70,8 @@
 		</div>
 	</section>
 	<footer>
+		<div><strong data-localization-key="FOOTER_GET_THE_ADDON">Get the RP Profile Viewer addon:</strong> <a href="https://www.esoui.com/downloads/info2959-RPProfileViewer.html" target="_blank">ESOUI.com</a> <span class="smolbreak"><i data-localization-key="OR">or</i> <span data-localization-key="FOOTER_ADDON_BEFORE_LINK">in the Roleplay category in</span> <a href="https://minion.mmoui.com/" target="_blank">Minion</a><span data-localization-key="FOOTER_ADDON_AFTER_LINK">!</span></span></div>
 		<div><strong data-localization-key="FOOTER_JOIN_THE_DISCUSSION">Join the discussion:</strong><a class="buttonLink" href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a></div>
-		<div><strong data-localization-key="FOOTER_GET_THE_ADDON">Get the addon:</strong> <a href="https://www.esoui.com/downloads/info2871-RollplayIntegration.html" target="_blank">ESOUI.com</a> <span class="smolbreak"><i data-localization-key="OR">or</i> <span data-localization-key="FOOTER_ADDON_BEFORE_LINK">in the Roleplay category in</span> <a href="https://minion.mmoui.com/" target="_blank">Minion</a><span data-localization-key="FOOTER_ADDON_AFTER_LINK">!</span></span></div>
 	</footer>
 	<div id="modalBG">
 		<div id="errorModal">
