--- a/charsheet.html
+++ b/charsheet.html
@@ -202,7 +202,7 @@
 				<p data-localization-key="CHARACTER_HELP_KNOWLEDGE_SKILLS_TEXT">Knowledge skills are a special class of skill that always have Intelligence as their governing attribute.  Some are more difficult to learn and increase in difficulty more quickly.</p>
 				<h3 data-localization-key="PROFILE_INFO">Profile Info</h3>
 				<p><span data-localization-key="CHARACTER_HELP_PROFILE_INFO_BEFORE_LINK">Below your skill selections, you can enter more information for your character.  All fields support</span> <a href="https://www.markdownguide.org/basic-syntax/" target="_blank" data-localization-key="MARKDOWN">Markdown</a> <span data-localization-key="CHARACTER_HELP_PROFILE_INFO_AFTER_LINK">formatting!</span></p>
-				<p data-localization-key="CHARACTER_HELP_MARKDOWN_EXTENSIONS">Use curly braces to link to a character's profile - {Example}</p>
+				<p data-localization-key="CHARACTER_HELP_MARKDOWN_EXTENSIONS">Use curly braces to link to a character's profile - {Like This}</p>
 			</div>
 			<button id="helpDone" type="button" data-localization-key="OK">Ok</button>
 		</div>
