--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Rollplay is a dice rolling supplement for roleplayers in The Elder Scrolls Online.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!">
+	<meta name="description" content="Rollplay is a character profile and dice rolling supplement for roleplayers in The Elder Scrolls Online.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!">
 	<meta property="og:image" content="./assets/images/logo.png"/>
 	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
@@ -28,7 +28,7 @@
 	<div id="main">
 		<div id="call-to-action">
 			<h2>Welcome to Rollplay!</h2>
-			<p>Rollplay is a dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank" rel="noopener">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!</p>
+			<p>Rollplay is a character profile and dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank" rel="noopener">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!</p>
 			<div class="slideshow">
 				<div class="slide waiting" style="background: url('./assets/images/slideshow/CharSheet.jpg')"></div>
 				<div class="slide waiting"></div>
@@ -39,7 +39,7 @@
 				<ul>
 					<li><a href="./namegenerator.html">Name Generator</a></li>
 					<li><a href="./profile.html">View Characters</a></li>
-					<li><a href="https://www.esoui.com/downloads/info2871-RollplayIntegration.html" target="_blank">ESO Addon</a></li>
+					<li><a href="https://www.esoui.com/downloads/info2959-RPProfileViewer.html" target="_blank">Profile Viewer Addon</a></li>
 				</ul>
 			</div>
 		</div>
