Improved formatting of Markdown text fields.

--- a/charsheet.html
+++ b/charsheet.html
@@ -93,7 +93,7 @@
 			<h2 data-localization-key="CHARACTER_PROFILE">Character Profile</h2>
 			<h3 data-localization-key="SHORT_DESCRIPTION">Short Description</h3>
 			<textarea type="textarea" id="charBackground" name="charBackground" maxlength="1000" rows="10" placeholder="SHORT_DESCRIPTION_DESCRIPTION" data-localization-key></textarea>
-			<button id="charBackgroundPreview" type="button" data-id="charBackground" data-localization-key="PREVIEW">Preview</button>
+			<button id="charBackgroundPreview" type="button" data-id="description" data-localization-key="PREVIEW">Preview</button>
 			<h3 data-localization-key="GENERAL_INFORMATION">General Information</h3>
 			<div id="profileGeneral">
 				<div id="imageInfo">
@@ -185,7 +185,7 @@
 		<div>
 			<textarea type="textarea" id="charBiography" name="charBiography" maxlength="10000" rows="20" placeholder="BIOGRAPHY_DESCRIPTION" data-localization-key></textarea>
 		</div>
-		<button id="charBiographyPreview" type="button" data-id="charBiography" data-localization-key="PREVIEW">Preview</button>
+		<button id="charBiographyPreview" type="button" data-id="biography" data-localization-key="PREVIEW">Preview</button>
 	</section>
 	<footer></footer>
 	<div id="modalBG">
