Profiles: Added dropdown for viewing characters by account.  Account names in character stat blocks can also be clicked to view characters for that account.

--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,9 @@
 	<section id="main" class="hideMe">
 		<div id="profileHeader">
 			<div id="charListing">
+				<select id="accounts">
+					<option value="@all" data-localization-key="PROFILE_ALL_PLAYERS">---- All Players ----</option>
+				</select>
 				<select id="characters"></select>
 				<div id="printout"></div>
 			</div>
