Added RP Helper screen that can automatically break up large blocks of text and/or store notes.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<h3>Quick Links</h3>
 				<ul>
 					<li><a href="./namegenerator.html">Name Generator</a></li>
+					<li><a href="./helper.html">RP Helper</a></li>
 					<li><a href="./profile.html">View Characters</a></li>
 					<li><a href="https://www.esoui.com/downloads/info2959-RPProfileViewer.html" target="_blank">Profile Viewer Addon</a></li>
 				</ul>
