CharSheet: Non-standard upbringings may now be selected (for free ranks in a lore skill)

--- a/charsheet.html
+++ b/charsheet.html
@@ -44,6 +44,8 @@
 		<div>
 			<label for="charRace" data-localization-key="LABEL_RACE">Race:</label>
 			<select name="charRace"></select>
+			<label for="charBackground" data-localization-key="LABEL_BACKGROUND">Upbringing:</label>
+			<select name="charBackground"></select>
 			<label for="charSex" data-localization-key="LABEL_SEX">Sex:</label>
 			<select name="charSex">
 				<option value="SEX_MALE" data-localization-key="SEX_MALE">Male</option>
