Added descriptive (non-numeric) display option for attributes and skills.

--- a/dashboard.html
+++ b/dashboard.html
@@ -125,6 +125,15 @@
 				</p>
 			</div>
 			<div class="settingGroup">
+				<div>
+					<input type="checkbox" id="optNumeric" />
+					<label for="optNumeric" data-localization-key="NUMERIC_DISPLAY">Numeric Display</label>
+				</div>
+				<p>
+					<em><span data-localization-key="NUMERIC_SETTING_LINE_1">Enable this option to display</span><br /><span data-localization-key="NUMERIC_SETTING_LINE_2">raw numbers in</span><br /><span data-localization-key="NUMERIC_SETTING_LINE_3">character summaries.</span></em>
+				</p>
+			</div>
+			<div class="settingGroup">
 				<h4 data-localization-key="CHANGE_PASSWORD">Change Password</h4>
 				<label for="newPassword" data-localization-key="NEW_PASSWORD">New Password</label>
 				<input type="password" id="newPassword" />
