Added first-time popup for users to select numeric display type.

--- a/dashboard.html
+++ b/dashboard.html
@@ -145,6 +145,18 @@
 				<button id="settingsCancel" type="button" data-localization-key="CANCEL">Cancel</button>
 			</div>
 		</div>
+		<div id="numericDisplayModal">
+			<h3 data-localization-key="NUMERIC_DISPLAY">Numeric Display</h3>
+			<p data-localization-key="NUMERIC_DISPLAY_DESCRIPTION">When summarizing a character's stats, ESO Rollplay can display skills and attributes in two ways:</p>
+			<div>
+				<button id="numericDisplayNumeric" type="button" data-localization-key="NUMERIC_DISPLAY_NUMERIC" data-key="numeric">Numeric</button>
+				<span data-localization-key="NUMERIC_DISPLAY_NUMERIC_TEXT">Show me the raw numbers.</span>
+			</div>
+			<div>
+				<button id="numericDisplayDescriptive" type="button" data-localization-key="NUMERIC_DISPLAY_DESCRIPTIVE" data-key="descriptive">Descriptive</button>
+				<span data-localization-key="NUMERIC_DISPLAY_DESCRIPTIVE_TEXT">Use text to describe the values.</span>
+			</div>
+		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
