Added OOC Info field.

--- a/charsheet.html
+++ b/charsheet.html
@@ -183,6 +183,11 @@
 		</div>
 	</section>
 	<section id="longProfile" class="hideMe">
+		<h2 data-localization-key="OOC_INFO">OOC Info</h2>
+		<div>
+			<textarea type="textarea" id="charOOCInfo" name="charOOCInfo" maxlength="1000" rows="20" placeholder="OOC_INFO_DESCRIPTION" data-localization-key></textarea>
+		</div>
+		<button id="charOOCPreview" type="button" data-id="oocInfo" data-localization-key="PREVIEW">Preview</button>
 		<h2 data-localization-key="BIOGRAPHY">Biography</h2>
 		<div>
 			<textarea type="textarea" id="charBiography" name="charBiography" maxlength="10000" rows="20" placeholder="BIOGRAPHY_DESCRIPTION" data-localization-key></textarea>
