--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,7 @@
 			</div>
 		</div>
 		<div id="biography" class="markdownFormatted"></div>
+		<div id="oocInfo" class="markdownFormatted"></div>
 		<div id="storyList" class="hideMe">
 			<h3 data-localization-key="CHARACTER_STORIES">Character Stories</h3>
 			<ol id="charStories"></ol>
