--- a/story.html
+++ b/story.html
@@ -14,7 +14,13 @@
 		<h1><a href="/" data-localization-key="ROLLPLAY_TITLE">ESO Rollplay</a></h1>
 	</nav>
     <div id="loading"></div>
-	<section id="main" class="hideMe markdownFormatted">
+	<section id="body" class="hideMe markdownFormatted">
+		<header id="header" class="hideMe">
+			<a target="_blank"><img class="hideMe" /></a>
+			<h1></h1>
+		</header>
+		<div id="main">
+		</div>
     </section>
 	<div id="modalBG">
 		<div id="errorModal">
