Support for different localization formatting

--- a/dashboard.html
+++ b/dashboard.html
@@ -117,6 +117,7 @@
 					<label for="optLanguage" data-localization-key="LANGUAGE">Language</label>
 					<select id="optLanguage">
 						<option value="EN-US" data-localization-key="EN-US">English</option>
+						<!--option value="ES" data-localization-key="ES">Español</option-->
 						<option value="PT-BR" data-localization-key="PT-BR">Português do Brasil</option>
 					</select>
 				</div>
