Added alert about new ESO Profiles site

--- a/dashboard.html
+++ b/dashboard.html
@@ -76,6 +76,7 @@
 				</div>
 			</div>
 			<div id="miscTasks" class="hideMe">
+				<div id="new-site-info"><p><strong>ATTENTION:</strong> There is a new site, dedicated solely to character profiles!</p><p>Check out <a href="https://eso-profiles.net/" target="_blank">ESO-Profiles.net</a>!<p></div>
 				<h3 data-localization-key="OTHER_TASKS">Other Tasks</h3>
 				<div id="taskHolder"></div>
 			</div>
