--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			</div>
 		</div>
 		<div id="auth-panel">
+			<div id="new-site-info"><p><strong>ATTENTION:</strong> There is a new site, dedicated solely to character profiles!</p><p>Check out <a href="https://eso-profiles.net/" target="_blank">ESO-Profiles.net</a>!<p></div>
 			<div id="loading"></div>
 		</div>
 	</div>
